Final version. Completed

--- a/PyCityChallenge.ipynb
+++ b/PyCityChallenge.ipynb
@@ -2,7 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83a94b39",
+   "id": "efd37254",
+   "metadata": {},
+   "source": [
+    "# Analysis of Module 4 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2539acf",
+   "metadata": {},
+   "source": [
+    "The analysis below will show a couple of key results. \n",
+    "\n",
+    "-We can see that smaller schools with less students, performed better than schools with a larger population of students.\n",
+    "\n",
+    "-We also see that the top performing schools, in this analysis, are all charter schools over district schools. The top 5   performing schools are charter type schools, while the bottom 5 performing are all district type schools.\n",
+    "\n",
+    "-Per student spending is higher in lower performing schools than the top performing ones.\n",
+    "\n",
+    "-Both reading and math scores are better in lower populated charter schools than in higher populated district schools.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51788120",
    "metadata": {},
    "source": [
     "# **PyCity Schools Analysis**"
@@ -165,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de3e44ee",
+   "id": "ae67666c",
    "metadata": {},
    "source": [
     "# **District Summary**"
@@ -173,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3309206",
+   "id": "3c1291f3",
    "metadata": {},
    "source": [
     "### School Count for Each School Name in DataFrame"
@@ -182,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "84e73ba9",
+   "id": "5709abac",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0abc4b4d",
+   "id": "52f93925",
    "metadata": {},
    "source": [
     "### Total Unique Schools in DataFrame"
@@ -228,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "30f1d00d",
+   "id": "8e5d1d7f",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7ae5fe",
+   "id": "d680fd29",
    "metadata": {},
    "source": [
     "### Total Number of Students"
@@ -258,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "984ab2d5",
+   "id": "b2b68994",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a552124",
+   "id": "30f43e6d",
    "metadata": {},
    "source": [
     "### Total Budget"
@@ -289,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "032a9df9",
+   "id": "0371ccbc",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0d8f57",
+   "id": "97a51d73",
    "metadata": {},
    "source": [
     "### Average Math Score in DataFrame"
@@ -320,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a3c3e510",
+   "id": "0684da78",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a76261",
+   "id": "11b581d5",
    "metadata": {},
    "source": [
     "### Average Reading Score in Dataframe"
@@ -351,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9add1c03",
+   "id": "7495b3aa",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3940bbb",
+   "id": "2859565e",
    "metadata": {},
    "source": [
     "### Percentage of Students Who Passed Math"
@@ -382,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "062ab8d0",
+   "id": "9524f34d",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60c55e43",
+   "id": "8d4b1f5b",
    "metadata": {},
    "source": [
     "### Percentage of Students Who Passed Reading"
@@ -415,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b78905c7",
+   "id": "1fb0d940",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7cdd39",
+   "id": "e7df1ef5",
    "metadata": {},
    "source": [
     "### Percentage of Students Who Passed Math & Reading"
@@ -448,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "82ac7598",
+   "id": "fdb78e8f",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "744a5f4d",
+   "id": "db124f89",
    "metadata": {},
    "source": [
     "### Snapshot of District Key Metrics"
@@ -483,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c23f4286",
+   "id": "e55c1a6d",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9798efe6",
+   "id": "6285753b",
    "metadata": {},
    "source": [
     "# **School Summary**"
@@ -579,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e473648f",
+   "id": "401a7c07",
    "metadata": {
     "scrolled": true
    },
@@ -720,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0442f1e6",
+   "id": "da5a75ec",
    "metadata": {},
    "source": [
     "### School Types"
@@ -729,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "f7e66090",
+   "id": "68f6da12",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec3f1d80",
+   "id": "6d2fa853",
    "metadata": {},
    "source": [
     "### School Names"
@@ -776,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8ef915c3",
+   "id": "4a8bc974",
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc3c313",
+   "id": "9403c4af",
    "metadata": {},
    "source": [
     "### Total Students Per School"
@@ -812,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c5dfe857",
+   "id": "3328da20",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08e60b7",
+   "id": "8f3df849",
    "metadata": {},
    "source": [
     "### Total School Budget and Per Capita spending"
@@ -858,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "12490514",
+   "id": "d3168fe0",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "4524a0f1",
+   "id": "8e0bb27b",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e40db9",
+   "id": "aa32485b",
    "metadata": {},
    "source": [
     "### Average Test Scores per School"
@@ -953,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "fc8b3e12",
+   "id": "aa694a71",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "7ebd98a3",
+   "id": "acb5c8d3",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6834332c",
+   "id": "3ea83dcd",
    "metadata": {},
    "source": [
     "### Number of Students per School with Math Scores 70 or Higher"
@@ -1054,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "1ce1e03f",
+   "id": "c297acb6",
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "dac09009",
+   "id": "b7cbf8fd",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f36311d3",
+   "id": "fc3be083",
    "metadata": {},
    "source": [
     " ### Number of Students per School with Reading Scores 70 or Higher"
@@ -1341,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "7a60a2f5",
+   "id": "355a0423",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "6aac752c",
+   "id": "703b0649",
    "metadata": {
     "scrolled": true
    },
@@ -1621,7 +1647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86053dc5",
+   "id": "071e62c5",
    "metadata": {},
    "source": [
     "### Number of Students that Passed both Math and Reading with 70 or Higher"
@@ -1630,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "31cfa5cf",
+   "id": "a20da0ce",
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58e6b46",
+   "id": "954624c2",
    "metadata": {},
    "source": [
     "### School Summary"
@@ -1680,7 +1706,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "7d19c159",
+   "id": "cee64c6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e6fbfde",
+   "id": "736bc6b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1701,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "8fdf934e",
+   "id": "a8d270c4",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58600695",
+   "id": "14a3e1b2",
    "metadata": {},
    "source": [
     "### Sort Schools by % Overall Passing Ascending"
@@ -2040,7 +2066,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "e0828aa2",
+   "id": "b17f1ae9",
    "metadata": {
     "scrolled": true
    },
@@ -2179,7 +2205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e35bf92",
+   "id": "32a7250d",
    "metadata": {},
    "source": [
     "### Lowest-Performing Schools (by % Overall Passing)"
@@ -2188,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "7ae78427",
+   "id": "eb6fbc5f",
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9976fb",
+   "id": "6b179674",
    "metadata": {},
    "source": [
     "### Math Scores by Grade"
@@ -2332,7 +2358,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "b812bf9d",
+   "id": "692ab325",
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc573e83",
+   "id": "5c589c83",
    "metadata": {},
    "source": [
     "### Reading Score by Grade"
@@ -2544,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "8ba8f85d",
+   "id": "67695ca6",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a46c5f",
+   "id": "f75dfb48",
    "metadata": {},
    "source": [
     "### Scores by School Spending"
@@ -2758,7 +2784,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "8c511a2c",
+   "id": "2799df96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2770,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "f044f7bc",
+   "id": "e63d623c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2781,7 +2807,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "43c3ce7c",
+   "id": "50f8f3e0",
    "metadata": {},
    "outputs": [
     {
@@ -3153,7 +3179,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "1c83b3d0",
+   "id": "1dcbfaac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3168,7 +3194,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "392a0389",
+   "id": "5cc4d684",
    "metadata": {},
    "outputs": [
     {
@@ -3284,7 +3310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce494397",
+   "id": "b13dbd4d",
    "metadata": {},
    "source": [
     "### Scores by School Size"
@@ -3293,7 +3319,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "d0f7aa4b",
+   "id": "0aec890f",
    "metadata": {},
    "outputs": [
     {
@@ -3654,7 +3680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961b0f95",
+   "id": "7ae3c71e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3662,7 +3688,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "e674d0ab",
+   "id": "8856e013",
    "metadata": {},
    "outputs": [
     {
@@ -3770,7 +3796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9d9846b",
+   "id": "ed4d28bb",
    "metadata": {},
    "source": [
     "### Scores by School Type"
@@ -3779,7 +3805,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "d3647caa",
+   "id": "4075eec9",
    "metadata": {},
    "outputs": [
     {
@@ -3877,7 +3903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "949347be",
+   "id": "e08fa895",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3885,7 +3911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043a4faa",
+   "id": "56b51de0",
    "metadata": {},
    "outputs": [],
    "source": []
